RESOLVED FIXED89861
Web Inspector: "Emulate Touch Events" breaks selecting elements with "touchstart" event listeners for inspection.
https://bugs.webkit.org/show_bug.cgi?id=89861
Summary Web Inspector: "Emulate Touch Events" breaks selecting elements with "touchst...
Alexander Pavlov (apavlov)
Reported 2012-06-25 03:08:25 PDT
After pressing Ctrl-Shift-C in the Web Inspector, you cannot select in the page an element with the "touchstart" event listener. Upstreaming http://code.google.com/p/chromium/issues/detail?id=133767
Attachments
Patch (2.05 KB, patch)
2012-06-25 03:35 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2012-06-25 03:35:00 PDT
WebKit Review Bot
Comment 2 2012-06-25 07:27:07 PDT
Comment on attachment 149268 [details] Patch Clearing flags on attachment: 149268 Committed r121154: <http://trac.webkit.org/changeset/121154>
WebKit Review Bot
Comment 3 2012-06-25 07:27:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.